--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,17 @@
 @import url("https://fonts.googleapis.com/css2?family=DynaPuff:wght@600&display=swap");
 
+@keyframes scale {
+  0% {
+    scale: 1;
+  }
+  50% {
+    scale: 0.8;
+  }
+  100% {
+    scale: 1;
+  }
+}
+
 body {
   padding: 0;
   margin: 0;
@@ -8,6 +20,7 @@ body {
 
 #app {
   height: 100vh;
+  width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -15,7 +28,8 @@ body {
 }
 
 .canvasContainer {
-  margin-bottom: 30px;
+  margin-top: 15px;
+  margin-right: 50px;
 }
 
 .button {
@@ -44,6 +58,11 @@ body {
   background-size: 100%;
 }
 
+.clicked {
+  animation-name: scale;
+  animation-duration: 0.5s;
+}
+
 #clearButton {
   background-image: url("assets/icons/reset_button.png");
   background-size: 100%;
@@ -52,12 +71,35 @@ body {
 #title {
   font-family: "DynaPuff", cursive;
   font-size: 50px;
-  color: #6cc4fc;
+  color: #4e4e4e;
 }
 
 #controller {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-evenly;
-  width: 100vw;
+  align-items: center;
+}
+
+#selectSound {
+  margin-right: 20px;
+}
+
+#container {
+  display: flex;
+  flex-direction: row;
+  padding: 50px;
+  justify-content: space-evenly;
+  border-width: 8px;
+  border-color: #ffffff;
+  border-style: solid;
+  border-radius: 50px;
+  background-color: #aec4f7;
+}
+
+select {
+  border-width: 1px;
+  border-style: solid;
+  background-color: #ffffff;
+  padding: 10px;
 }
